my-apps/kasm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasm
  labels:
    name: kasm
