my-apps/kasm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasm
  namespace: kasm
  labels:
    app: kasm
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: kasm
